--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "prettier": "2.0.5",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
+        "vue-cli-plugin-axios": "0.0.4",
         "vue-cli-plugin-element": "^1.0.1",
         "vue-template-compiler": "^2.6.11"
     },
