--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write \"src/**/*.js\" \"src/**/*.vue\""
   },
   "dependencies": {
+    "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
@@ -17,6 +18,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.7.0",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
@@ -26,15 +28,20 @@
     "@vue/test-utils": "1.0.0-beta.31",
     "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.3.1",
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
+    "mutationobserver-shim": "^0.3.3",
     "node-sass": "^4.9.2",
+    "popper.js": "^1.16.0",
+    "portal-vue": "^2.1.6",
     "prettier": "2.0.5",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-bootstrap-vue": "^0.6.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-tailwind": "^1.3.0",
     "vue-template-compiler": "^2.6.11"
