--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-snotify": "^3.2.1",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
