--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VUE_APP_DOMAIN=https://fmm-system-backend-dev.herokuapp.com
+VUE_APP_DOMAIN=http://127.0.0.1:8000
 NODE_ENV=production
+https://fmm-system-backend-dev.herokuapp.com
