--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VUE_APP_DOMAIN=http://127.0.0.1:8000
+VUE_APP_DOMAIN=https://fmm-system-backend-dev.herokuapp.com
 NODE_ENV=production
-https://fmm-system-backend-dev.herokuapp.com
+http://127.0.0.1:8000
