--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VUE_APP_DOMAIN=https://fmm-system-backend-dev.herokuapp.com
+VUE_APP_DOMAIN=http://192.168.1.109/fmm_record_backend/public
+https://fmm-system-backend-dev.herokuapp.com
 NODE_ENV=production
 http://127.0.0.1:8001
