Add: Added the developing page.

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VUE_APP_DOMAIN=http://192.168.1.109/fmm_record_backend/public
+VUE_APP_DOMAIN=http://127.0.0.1:8001
 https://fmm-system-backend-dev.herokuapp.com
+http://192.168.1.109/fmm_record_backend/public
 NODE_ENV=production
 http://127.0.0.1:8001
